--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Maven+Pro:wght@400..900&display=swap");
-
 @import "tailwindcss";
 
 @plugin 'tailwindcss-animate';
@@ -7,7 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-display: "Maven pro", cursive;
+  --font-display: var(--font-maven-pro), cursive;
   --color-background: hsl(var(--background));
   --color-foreground: hsl(var(--foreground));
 
